--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,14 @@
   <h1>Up and Running with Serverless Functions</h1>
   <button id="fetch-btn">Fetch</button>
   <button id="fetch-pokedex-btn">Fetch Pokedex</button>
+  <button id="fetch-hoenn-btn">Fetch Hoenn</button>
   <p id="response-output">Response Placeholder</p>
 
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const fetchBtn = document.getElementById('fetch-btn')
       const fetchPokedexBtn = document.getElementById('fetch-pokedex-btn')
+      const fetchHoennBtn = document.getElementById('fetch-hoenn-btn')
       const responseText = document.getElementById('response-output')
 
       fetchBtn.addEventListener('click', async () => {
@@ -27,7 +29,21 @@
       })
 
       fetchPokedexBtn.addEventListener('click', async () => {
-        const response = await fetch('/.netlify/functions/pokedex')
+        const response = await fetch('/.netlify/functions/pokedex',
+          {
+            method: 'POST',
+            body: JSON.stringify({ region: 'kanto' })
+          })
+        const json = await response.json()
+        responseText.innerText = JSON.stringify(json)
+      })
+
+      fetchHoennBtn.addEventListener('click', async () => {
+        const response = await fetch('/.netlify/functions/pokedex',
+          {
+            method: 'POST',
+            body: JSON.stringify({ region: 'hoenn' })
+          })
         const json = await response.json()
         responseText.innerText = JSON.stringify(json)
       })
